force-app/main/default/objects/PMC_CPQ_ProductSalesArea__c/PMC_CPQ_ProductSalesArea__c.object-meta.xml
<CustomObject>
    <label>Product Sales Area</label>
    <nameField>
        <displayFormat>PS-{0000}</displayFormat>
        <label>Product Sales Area Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Sales Areas</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>