force-app/main/default/objects/PMC_CPQ_ProductSalesArea__c/fields/PMC_CPQ_Inactive__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will determine if the Product Sales Area is inactive.</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>