force-app/main/default/objects/PMC_CPQ_ProductSalesArea__c/fields/PMC_CPQ_Product__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>ProductSalesAreas</relationshipName>
    <type>Lookup</type>
</CustomField>