force-app/main/default/objects/PMC_CPQ_ProductSalesArea__c/fields/PMC_CPQ_ProductSalesAreaSAPIdentifier__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_ProductSalesAreaSAPIdentifier__c</fullName>
    <description>This should hold the concatenated value of Product SKU from SAP and Sales Org value from SAP.</description>
    <externalId>true</externalId>
    <label>Product Sales Area SAP Identifier</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>