force-app/main/default/objects/PMC_CPQ_ProductSalesArea__c/fields/PMC_CPQ_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>PMC_CPQ_Sales_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Area</label>
    <referenceTo>PMC_SS_SalesArea__c</referenceTo>
    <relationshipName>ProductSalesAreas</relationshipName>
    <type>Lookup</type>
</CustomField>